Cleaned up implementation, fixed unit tests, copyright info, clean up

--- a/examples/Balynn.Maths.Examples.Fraction/Balynn.Maths.Examples.Fraction.csproj
+++ b/examples/Balynn.Maths.Examples.Fraction/Balynn.Maths.Examples.Fraction.csproj
@@ -36,6 +36,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\SharedSolutionInfo.cs">
+      <Link>Properties\SharedSolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
