--- a/src/Balynn.Maths.Fraction/Balynn.Maths.Fraction.csproj
+++ b/src/Balynn.Maths.Fraction/Balynn.Maths.Fraction.csproj
@@ -34,6 +34,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\SharedSolutionInfo.cs">
+      <Link>Properties\SharedSolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="Fraction.cs" />
     <Compile Include="Fraction.Operators.cs">
       <DependentUpon>Fraction.cs</DependentUpon>
