--- a/tests/Balynn.Math.PerformanceTests.Fraction/Balynn.Maths.PerformanceTests.Fraction.csproj
+++ b/tests/Balynn.Math.PerformanceTests.Fraction/Balynn.Maths.PerformanceTests.Fraction.csproj
@@ -36,6 +36,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\SharedSolutionInfo.cs">
+      <Link>Properties\SharedSolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
